
## [Unreleased]
### Changed
- [#66] Updated controllers to remove deprecated use of modAction
- Updated installer and package builder to remove deprecated use of modAction
- Removed fileuploadfield.js utility (already included with MODX > 2.3)
- Removed mgr.css (no longer needed with MODX > 2.3)
- Removed legacyMode
- Removed deprecated use of modAction in js files

## [1.5.1-pl2] - 2018-07-26
### Fixed
- Fixed icon in task scheduler status display

## [1.5.1-pl] - 2018-07-26
### Added
- Added task scheduler status display in action toolbar (seconds since last touch by task scheduler job)

### Removed
- Removed add-on version number from action toolbar

## [1.5.0-pl] - 2018-07-23
### Added
- General GDPR compliance release (1st-step)!
- Added new GDPR fields (activatedon, ip_activated) to subscribers export
- Implemented a flexible setup/initialization error handling
- Added a CMP for error handling
- [#60] Proper handling for "no GoodNews container available" situations
- Proper handling for "access denied" situations
- Make automatic inlining of CSS a setting (Gmail now supports embedded CSS, which removes the need for inline CSS in Gmail)
- Added sample Privacy Policy and terms and Conditions resources to installer
- [#61] Extended subscription process to also log activation IP + timestamp (GDPR compliance)

### Changed
- Newsletters grid initially loads with autorefresh enabled
- Enhanced automatic multipart mail generation (plain-text part of mail is now perfectly formatted and respects full mail body)
- Refactored preinstalled sample newsletter templates for simplicity and clean design
- Refactored all email-template chunks (for subscription, profile and reports) for simplicity and clean design
- Changed autorefresh and workerprocess-emergency-stop buttons from splitbutton to modern chebox toggle switches
- First changes for better MODX 3 compatibility
- Better UI for auto-refresh button
- Better UI/UX for emergency stop of worker processes